# semfora-pm

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: instructions.md
.pm/: config.yaml
docs/: PM_V2_IMPLEMENTATION_PLAN.md
src/semfora_pm/: __init__.py  cli.py  dependencies.py  external_items.py  linear_client.py  local_tickets.py  mcp_server.py  memory.py  plans.py  pm_config.py  session.py  tickets.py  toon.py
src/semfora_pm/commands/: __init__.py
src/semfora_pm/db/: __init__.py  connection.py  schema.py
src/semfora_pm/models/: __init__.py  ticket.py
src/semfora_pm/output/: __init__.py  format.py  pagination.py
src/semfora_pm/services/: __init__.py  context.py  dependencies.py  labels.py  linear_tickets.py  links.py  local_tickets.py  projects.py  sprints.py  unified_tickets.py
src/semfora_pm/tui/: __init__.py  app.py  providers.py  state.py
src/semfora_pm/tui/screens/: __init__.py  dashboard.py  dependencies.py  help.py  local_tickets.py  modals.py
src/semfora_pm/tui/styles/: theme.tcss
src/semfora_pm/tui/widgets/: __init__.py  dependency_tree.py  filter_bar.py  local_ticket_item.py  provider_panel.py  status_badge.py
tests/: __init__.py  test_db.py  test_dependencies.py  test_external_items.py  test_local_tickets.py  test_mcp_server.py  test_memory.py  test_plans.py  test_session.py  test_tickets.py  test_toon.py
