[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semfora-pm"
version = "0.1.0"
description = "Semfora project management - Linear integration for ticket management"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Semfora Team" }
]

dependencies = [
    "linearator>=0.1.0",
    "rich>=13.0",
    "typer>=0.9.0",
    "mcp[cli]>=1.0.0",
    "platformdirs>=4.0",
    "toon-python>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
semfora-pm = "semfora_pm.cli:app"
semfora-pm-mcp = "semfora_pm.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semfora_pm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
